@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-24T16:20:28Z",
+  "timestamp" : "2023-09-25T08:23:08Z",
   "count_outdated" : 508,
   "uniques_outdated" : 242,
-  "count" : 522,
-  "uniques" : 249,
+  "count" : 524,
+  "uniques" : 250,
   "clones" : [
     {
       "timestamp": "2023-09-17T00:00:00Z",
@@ -63,6 +63,15 @@
       "timestamp": "2023-09-24T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-25T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
