@@ -1,5 +1,5 @@
 {
-  "count": 14,
+  "count": 16,
   "uniques": 1,
   "clones": [
     {
@@ -34,6 +34,11 @@
     },
     {
       "timestamp": "2023-09-24T00:00:00Z",
+      "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-09-25T00:00:00Z",
       "count": 2,
       "uniques": 1
     }
